--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,8 @@ body {
 }
 
 h1 {
-  font-size: 5rem;
-  color: black;
+  margin-top: 5%;
+  font-size: 4rem;
   filter: drop-shadow(0px 0px 20px white);
 }
 
@@ -45,7 +45,7 @@ footer {
 }
 
 .set {
-  margin: 10% auto;
+  margin: 8% auto;
 }
 
 .game-over {
@@ -81,4 +81,13 @@ footer {
 }
 * {
   font-family: "Poppins", sans-serif;
+}
+#title {
+  cursor: pointer;
+  display: inline-block;
+}
+#title:hover {
+  opacity: 0.8;
+  transform: scale(1.1);
+  filter: brightness(70%);
 }
